--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
@@ -15,7 +16,8 @@
     "vue-plugin-load-script": "^2.1.0",
     "vue-router": "^3.2.0",
     "vue-star-rating": "^1.7.0",
-    "vuex": "^3.4.0"
+    "vue-stripe-elements-plus": "^0.3.2",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -29,6 +31,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
     "prettier": "^2.2.1",
+    "vue-star-rating": "^1.6.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
